Correct layout issues with projects on home page

--- a/_sass/_layout-core.scss
+++ b/_sass/_layout-core.scss
@@ -247,8 +247,9 @@ img {
 }
 
 
-section footer {
-    padding: 1em 0;
+section footer,
+section header {
+    padding: 1em;
     clear: both;
 }
 
