--- a/_sass/_layout-projects.scss
+++ b/_sass/_layout-projects.scss
@@ -28,8 +28,16 @@
 }
 
 .projects-front {
-    @include outer-container;
+    //@include outer-container;
+    clear: both;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
     padding: 0 1em 1em 1em;
+    //
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 .date {
     font-size: 0.8em;
